Minor fixes on mobile layout

--- a/styles.css
+++ b/styles.css
@@ -105,17 +105,17 @@ select {
     display: grid;
 }
 
-.d-block {
-    display: block;
-}
-
 .container {
     margin-inline: auto;
-    max-width: 80rem;
   }
 
   .uppercase {
     text-transform: uppercase;
+  }
+
+  .main {
+    max-width: 375px;
+    
   }
 
   /* ---------------------------------------------- */
@@ -152,15 +152,48 @@ select {
     font-family: var(--ff-content);
     font-weight: 900;
   }
-  
-  .navbar {
-    display: inline-block;
+
+  .nav {
+    border: 1px solid black;
+    height: 100%;
+    /* width: 0; */
+    position: fixed;
+    z-index: 1;
+    left: 0;
+    right: 0;
+    width: inherit;
+    top: 0;
+    background-color: rgba(0,0,0, 0.9);
+    overflow-x: hidden;
+    transition: 0.5s;
   }
+
+  .nav-btn {
+    border: none;
+    cursor: pointer;
+    background: url(./images/icon-hamburger.svg) no-repeat center;
+    width: 1.5rem;
+    position: absolute;
+    top: 1rem;
+    right: 3rem;
+    color: black;
+  }
+
+  .navbar {
+    position: relative;
+  top: 25%; /* 25% from the top */
+  width: 100%; /* 100% width */
+  text-align: center; /* Centered text/links */
+  margin-top: 30px; /* 30px top margin to avoid conflict with the close button on smaller screens */
+  }
+
+  
 
   #home {
     background: url(./images/mobile/image-header.jpg) no-repeat center bottom;
     background-size: cover;
     height: 100vh;
+    position: relative;
   }
 
   .home-content {
@@ -268,6 +301,7 @@ select {
     flex-direction: column;
     padding-block: 3rem;
     gap: 2rem;
+    max-width: 375px;
   }
 
   #footer * {
